2011-06-25 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFStringFormat.c: Added hex and octal formatting code.
	* Tests/CFString/format.m: Add hex and octal formatting test.

2011-06-24 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFStringFormat.c: Added double formatting code.
	* Tests/CFString/format.m: Add double formatting test.

2011-06-24 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFStringUtilities.c: Remove use of alloca().
	* Source/CFStringEncoding.c: Fix conversion bug.
	* Source/CFStringFormat.c: Added more formatting code.

2011-06-22 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFUUID.c: Generate uuids using random function instead of
	relying on libuuid.

2011-06-21 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GNUmakefile: Added CFStringFormat.c to build.
	* Source/CFString.c: Fixed bugs and added a work around.
	* Source/CFStringFormat.c: Added, still incomplete, string formatting
	code.
	* Tests/CFString/format.m: String formatting tests.

2011-06-16 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFString.c: Added CFStringAppendCharacters()

2011-06-15 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.m:
	* Source/CFLocale.c: Use pthread directly.
	* Source/internal.h: Delete.
	* Source/CFString.c: Added *FileSystemRepresentation functions.
	* Source/CFStringEncoding.c: Implemented more encoding functions.
	* Source/CFStringFormat.c: New file for CFString formatting functions.
	* Headers/CoreFoundation/CFByteOrder.h: Fix compile mistake.

2011-06-13 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CFByteOrder.h: Actually swap byte order in
	CFSwappedFloat functions.

2011-06-09 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GNUmakefile:
	* Source/CFByteOrder.c: Delete CFByteOrder.c.
	* Headers/CoreFoundation/CFByteOrder.h: Inline byte order functions.

2011-06-04 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFString.c: Fixed a few bugs.